--- a/jQueryUI/css/jQueryUI.css
+++ b/jQueryUI/css/jQueryUI.css
@@ -44,7 +44,7 @@ body {
     margin: auto;
     text-align: center;
     width: 75%;
-    color: #FFFF99;
+    color: #FFEE55;
     background: linear-gradient(to bottom right, #1277A8 25%, #0D72A3 50%, #086D9E 75%, #036899 100%) !important;
     border-top-right-radius: 100px;
     border-top-left-radius: 100px;
